working on hamburger

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <!--<script src="js/all.min.js"></script>-->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
     <!--<meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">-->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/dashboard.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,500,700" rel="stylesheet prefetch">
     <title>vyth Shake That Booty</title>
 </head>
@@ -15,7 +16,17 @@
         <div class="top-menu-cont">
             <a class="fixed-top heading-black" href="#">vyth</a>
             <div class="hamburger">
-                Hamburger
+                <button id="nav-button">&#9776;</button>
+                <button class="cross">&#735;</button>
+                <div class="menu">
+                    <ul class="drop-down closed">
+                        <a href="#"><li>LINK ONE</li></a>
+                        <a href="#"><li>LINK TWO</li></a>
+                        <a href="#"><li>LINK THREE</li></a>
+                        <a href="#"><li>LINK FOUR</li></a>
+                        <a href="#"><li>LINK FIVE</li></a>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
