working on db transitions

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -16,17 +16,14 @@
         <div class="top-menu-cont">
             <a class="fixed-top heading-black" href="#">vyth</a>
             <div class="hamburger">
-                <button id="nav-button">&#9776;</button>
-                <button class="cross">&#735;</button>
-                <div class="menu">
+                <nav>
                     <ul class="drop-down closed">
-                        <a href="#"><li>LINK ONE</li></a>
-                        <a href="#"><li>LINK TWO</li></a>
-                        <a href="#"><li>LINK THREE</li></a>
-                        <a href="#"><li>LINK FOUR</li></a>
-                        <a href="#"><li>LINK FIVE</li></a>
+                        <li><a href="#" class="nav-button">&#9776;</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Library</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
-                </div>
+                </nav>
             </div>
         </div>
     </div>
