js animation functions

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="flexy text-center">
+        <div id="login-cont" class="flexy text-center">
             <div class="text-center">
                 <form class="login-form" id="login" action="application.html" method="post">
                     <h4 class="form-title">Sign In</h4>
