solid copy, working on transitions and js menu lost focus

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -22,7 +22,7 @@
             <a class="fixed-top heading-black" href="#">vyth</a>
             <div class="hamburger">
                 <nav>
-                    <ul class="drop-down closed">
+                    <ul id="top-menu" class="drop-down closed">
                         <li class="nav-item"><a href="#" class="nav-button">&#9776;</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="after-upload">After Upload</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="opening-slogan">Opening Slogan</a></li>
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a href="#" class="nav-action" data-id="upload-complete">Upload Complete</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="login-cont">Login Form</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="user-menu-cont">User Menu Right</a></li>
+                        <li class="nav-item"><a href="#" class="nav-action" data-id="transfers-table">Transfers Page</a></li>
                     </ul>
                 </nav>
             </div>
@@ -54,6 +55,7 @@
             <div class="drag-n-drop inner-cont">
                 <h3>Select and drag your file here</h3>
                 <span class="subtitle">Free 2GB File: <a href="#" class="blue-link">Pro: 50GB File</a></span>
+                <input id="file-upload" name="file-upload" type="hidden"> <!-- Need to write logic to handle file uploads-->
             </div>
         </div>
 
