mouse out on top menu ul

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -21,7 +21,7 @@
         <div class="top-menu-cont">
             <a class="fixed-top heading-black" href="#">vyth</a>
             <div class="hamburger">
-                <nav>
+                <nav id="nav-cont">
                     <ul id="top-menu" class="drop-down closed">
                         <li class="nav-item"><a href="#" class="nav-button">&#9776;</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="after-upload">After Upload</a></li>
