looking good starting media queries

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a href="#" class="nav-action" data-id="select-a-file-upload">Select File</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="preview-download">Preview Download</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="upload-complete">Upload Complete</a></li>
-                        <li class="nav-item"><a href="#" class="nav-action" data-id="user-menu-cont">User Menu Right</a></li>
+                        <li class="nav-item"><a href="#" class="nav-action" data-id="contacts">Contacts</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="transfers-table">Transfers Page</a></li>
                     </ul>
                 </nav>
@@ -50,7 +50,7 @@
         </div>
 
         <!--UPLOAD ICON SELECT A FILE TO UPLOAD -->
-        <div id="select-a-file-upload" class="center-left-cont flex-cont hide-field animated-slow fadein">
+        <div id="select-a-file-upload" class="text-center hide-field animated-slow fadein">
             <div class="drag-n-drop inner-cont">
                 <h3>Select and drag your file here</h3>
                 <span class="subtitle">Free 2GB File: <a href="#" class="blue-link">Pro: 50GB File</a></span>
@@ -82,8 +82,8 @@
         </div>
 
         <!--TRANSFERS PAGE -->
-        <div id="transfers-table" class="center-left-cont flex-cont animated fadein hide-field">
-                <div class="component">
+        <div id="transfers-table" class="text-center animated fadein hide-field">
+                <div class="component height80">
                     <div class="transfers-header">
                         <button id="add-file" class="icon plus-icon hover nav-action" data-id="select-a-file-upload"></button>
                         <h3 class="text-left">Transfers</h3>
@@ -124,7 +124,7 @@
             </div>
         </div>
 
-        <div id="contacts" class="contacts-page animated fadein hide-field">
+        <div id="contacts" class="component contacts-page text-center height80 animated fadein hide-field">
             <h3 class="text-left">Contacts</h3>
         </div>
 
