cleaned up js ready to use

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -29,8 +29,8 @@
                         <li class="nav-item"><a href="#" class="nav-action" data-id="select-a-file-upload">Select File</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="preview-download">Preview Download</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="upload-complete">Upload Complete</a></li>
-                        <li class="nav-item"><a href="#" class="nav-action" data-id="contacts">Contacts</a></li>
                         <li class="nav-item"><a href="#" class="nav-action" data-id="transfers-table">Transfers Page</a></li>
+                        <li class="nav-item"><a href="#" class="nav-action" data-id="contacts">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
@@ -67,7 +67,7 @@
                 <button id="download-file" class="button btn btn-download">Download</button>
             </div>
             <div class="file-preview-block col-2">
-                <img src="video_preview.jpg"/>
+                <img src="images/video_preview.jpg"/>
             </div>
         </div>
 
@@ -146,7 +146,7 @@
             <!--USER MENU CONTAINER -->
             <div id="user-menu-cont" class="mid-margin animated-slow bounceInDown hide-field">
                 <div id="usage-graph" class="mid-margin">
-                    <img id="link-to-graph" src="disk-usage.png"/>
+                    <img id="link-to-graph" src="images/disk-usage.png"/>
                     <span class="real-name">Noah Wilcox</span>
                     <span class="file-size">24GB Used</span>
                 </div>
